2010-11-17  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (avta_term_run): fix: unlock updates

2010-11-16  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.check): limit for checks

	* lua/akfavatar/utf8.lua (utf8.check_unicode): new function
	(lua/textview.lua): try to detect text encoding

	* lua/lua-akfavatar-prg (main): reset more settings

	* lua/akfavatar-term.c, lua/terminal.lua: new files

2010-11-15  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.check_bom, utf8.check):
	new functions

2010-11-14  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.characters): new function

	* lua/akfavatar/utf8.lua (utf8.codepoint): new function

	* lua/lua-avt.c (lavt_colors => avt.colors): new function

2010-11-13  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_unicode_to_utf8): function removed

	* lua/akfavatar/utf8.lua: new file

2010-11-12  Andreas K. Foerster  <info@akfoerster.de>

	* configure:
	eventually export all symbols for lua-akfavatar-bin
	(needed to load binary modules)

2010-11-10  Andreas K. Foerster  <info@akfoerster.de>

	* avtar.c (avt_mb_encode, avt_mb_decode):
	always assume 4 Bytes per char

	* lua/lua-avt.c (luaopen_akfavatar):
	register an exit function for the module

2010-10-28  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_unicode_to_utf8): new function

2010-10-26  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c:
	(avt_char): new type for single unicode char
	new functions:
	avt_put_char() replaces avt_put_character()
	avt_is_printable() replaces avt_printable()
	avt_key() replaces avt_get_key()
	many functions adapted

------------------------------------------------------------------------

2010-10-22  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.19.0 released

2010-10-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (many functions): check status before doing something
